--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
 
 <!-- Firebase (public index.html) -->
 <script type="module">
@@ -25,15 +24,17 @@
 </script>
 
 <style>
+/* -------------------- Global -------------------- */
 body {
   margin: 0;
   font-family: "Inter", sans-serif;
   background: linear-gradient(135deg, #0f172a, #1e293b);
   color: white;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
-/* Navbar */
+/* -------------------- Navbar -------------------- */
 .navbar {
   display: flex;
   align-items: center;
@@ -50,6 +51,10 @@ body {
   cursor: pointer;
   color: white;
   margin-right: 20px;
+  transition: transform 0.3s;
+}
+.menu-btn:hover {
+  transform: scale(1.2);
 }
 
 .navbar-center {
@@ -70,14 +75,19 @@ body {
   border-radius: 50%;
   margin-right: 10px;
   border: 2px solid white;
+  transition: transform 0.5s;
+}
+.school-logo:hover {
+  transform: rotate(10deg) scale(1.1);
 }
 
 .logo-text {
   font-size: 1.3rem;
   font-weight: 700;
+  text-shadow: 0 0 10px #60a5fa, 0 0 20px #3b82f6;
 }
 
-/* Sidebar */
+/* -------------------- Sidebar -------------------- */
 .side-menu {
   height: 100%;
   width: 0;
@@ -100,51 +110,52 @@ body {
   font-size: 1rem;
   font-weight: 500;
   transition: 0.3s;
+  text-shadow: 0 0 5px #60a5fa;
 }
-
 .side-menu a:hover {
   background: #2563eb;
   padding-left: 40px;
+  text-shadow: 0 0 15px #93c5fd;
 }
 
-.side-menu .close-btn {
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  font-size: 2rem;
-  cursor: pointer;
-}
-
-/* Header */
+/* -------------------- Header -------------------- */
 header {
   text-align: center;
   padding: 30px 20px;
 }
-
 header h1 {
   margin: 0;
-  font-size: 2.5rem;
+  font-size: 2.8rem;
   color: #60a5fa;
+  text-shadow: 0 0 10px #60a5fa, 0 0 20px #3b82f6;
+  animation: glow 2s infinite alternate;
 }
-
 header .motto {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   margin-bottom: 10px;
+  color: #93c5fd;
+  text-shadow: 0 0 8px #93c5fd;
+}
+header p {
+  font-size: 1.1rem;
+  color: #cbd5e1;
 }
 
-/* Main Section */
+/* -------------------- Main Section -------------------- */
 section {
   padding: 30px 20px;
   max-width: 900px;
   margin: auto;
 }
-
 section h2 {
   color: #60a5fa;
   margin-bottom: 20px;
   font-size: 2rem;
+  text-shadow: 0 0 10px #60a5fa;
+  animation: glow 2.5s infinite alternate;
 }
 
+/* -------------------- Gallery -------------------- */
 .gallery {
   display: flex;
   flex-wrap: wrap;
@@ -152,36 +163,103 @@ section h2 {
   justify-content: center;
   margin-bottom: 30px;
 }
-
 .gallery img {
   max-width: 100%;
   height: auto;
   border-radius: 10px;
+  transition: transform 0.5s, box-shadow 0.5s;
+}
+.gallery img:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 20px #2563eb, 0 0 30px #60a5fa;
 }
 
-/* Feature List */
-.feature-list li {
-  margin: 10px 0;
+/* -------------------- Quick Access Buttons -------------------- */
+.feature-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: center;
+  margin-top: 20px;
 }
 
-/* Footer */
+/* Button Entrance + Pulse Glow Animation */
+@keyframes slideGlow {
+  0% { opacity: 0; transform: translateY(20px); box-shadow: 0 0 0px #60a5fa; }
+  50% { opacity: 1; transform: translateY(0); box-shadow: 0 0 15px #60a5fa, 0 0 25px #3b82f6; }
+  100% { box-shadow: 0 0 10px #60a5fa, 0 0 20px #3b82f6; }
+}
+@keyframes pulseGlow {
+  0% { box-shadow: 0 0 10px #60a5fa, 0 0 20px #3b82f6; }
+  50% { box-shadow: 0 0 20px #60a5fa, 0 0 35px #3b82f6, 0 0 40px #93c5fd; }
+  100% { box-shadow: 0 0 10px #60a5fa, 0 0 20px #3b82f6; }
+}
+
+.neon-btn {
+  padding: 12px 25px;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 1rem;
+  color: #60a5fa;
+  border: 2px solid #60a5fa;
+  border-radius: 8px;
+  text-align: center;
+  transition: 0.3s;
+  position: relative;
+  opacity: 0;
+  transform: translateY(20px);
+  animation: slideGlow 0.8s forwards, pulseGlow 2.5s ease-in-out 0.8s infinite;
+}
+.feature-buttons .neon-btn:nth-child(1) { animation-delay: 0.1s, 0.9s; }
+.feature-buttons .neon-btn:nth-child(2) { animation-delay: 0.3s, 1.1s; }
+.feature-buttons .neon-btn:nth-child(3) { animation-delay: 0.5s, 1.3s; }
+.feature-buttons .neon-btn:nth-child(4) { animation-delay: 0.7s, 1.5s; }
+.feature-buttons .neon-btn:nth-child(5) { animation-delay: 0.9s, 1.7s; }
+.feature-buttons .neon-btn:nth-child(6) { animation-delay: 1.1s, 1.9s; }
+
+.neon-btn::before {
+  content: '';
+  position: absolute;
+  top: -5px; left: -5px; right: -5px; bottom: -5px;
+  border-radius: 10px;
+  background: linear-gradient(45deg, #60a5fa, #2563eb, #93c5fd);
+  opacity: 0;
+  transition: 0.3s;
+  z-index: -1;
+  filter: blur(8px);
+}
+
+.neon-btn:hover {
+  color: #ffffff;
+  background: #2563eb;
+  box-shadow: 0 0 15px #60a5fa, 0 0 25px #3b82f6, 0 0 35px #93c5fd;
+}
+
+.neon-btn:hover::before {
+  opacity: 1;
+}
+
+/* -------------------- Footer -------------------- */
 footer {
   text-align: center;
   padding: 20px;
   background: #1e3a8a;
   color: white;
   margin-top: 30px;
+  text-shadow: 0 0 5px #60a5fa;
 }
 
-/* Responsive */
+/* -------------------- Animations -------------------- */
+@keyframes glow {
+  from { text-shadow: 0 0 10px #60a5fa, 0 0 20px #3b82f6; }
+  to { text-shadow: 0 0 20px #93c5fd, 0 0 30px #2563eb; }
+}
+
+/* -------------------- Responsive -------------------- */
 @media (max-width: 768px) {
-  .logo-text {
-    font-size: 1rem;
-  }
-  .gallery {
-    flex-direction: column;
-    align-items: center;
-  }
+  .logo-text { font-size: 1rem; }
+  .gallery { flex-direction: column; align-items: center; }
+  .feature-buttons { flex-direction: column; align-items: center; }
 }
 </style>
 </head>
@@ -214,31 +292,31 @@ footer {
 
 <header>
   <h1>St Paul Learning Centre</h1>
-  <div class="motto">Strive For Success</div>
-  <p>Empowering students, connecting families, supporting teachers.</p>
+  <div class="motto">Strive For Success, Shine With Excellence</div>
+  <p>Empowering bright minds, connecting passionate families, and inspiring dedicated teachers for a brighter future.</p>
 </header>
 
 <section>
   <h2>Welcome to St Paul Learning Centre</h2>
   <p>
-    St Paul Learning Centre is dedicated to nurturing every student’s potential and fostering a vibrant, supportive community for families and educators. Explore our student and parent portals, discover resources, view our school showcase, and stay updated with news and announcements.
+    At <strong>St Paul Learning Centre</strong>, we are committed to unlocking every student’s potential and cultivating a dynamic, inclusive community. Explore our intuitive student and parent portals, access rich learning resources, witness our school’s inspiring showcase, and stay informed with the latest news and exciting announcements. Together, we create a world of opportunity and achievement.
   </p>
 
   <div class="gallery">
-    <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=400&q=80" alt="School Hall">
-    <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=400&q=80" alt="Classroom">
-    <img src="https://images.unsplash.com/photo-1513258496099-48168024aec0?auto=format&fit=crop&w=400&q=80" alt="Library">
+    <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=400&q=80" alt="Bright and welcoming school hall">
+    <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=400&q=80" alt="Interactive classroom full of learning">
+    <img src="https://images.unsplash.com/photo-1513258496099-48168024aec0?auto=format&fit=crop&w=400&q=80" alt="Modern library filled with resources">
   </div>
 
   <h3>Quick Access</h3>
-  <ul class="feature-list">
-    <li><a href="student-portal.html">Student Portal</a> – Access learning materials and your timetable</li>
-    <li><a href="parent-portal.html">Parent Portal</a> – Monitor progress and communicate with teachers</li>
-    <li><a href="admissions.html">Admissions</a> – Join our community</li>
-    <li><a href="resources.html">Resources</a> – Study tools and support</li>
-    <li><a href="showcase.html">Showcase</a> – Discover our achievements and history</li>
-    <li><a href="contact.html">Contact</a> – Get in touch with us</li>
-  </ul>
+  <div class="feature-buttons">
+    <a href="student-portal.html" class="neon-btn">Student Portal</a>
+    <a href="parent-portal.html" class="neon-btn">Parent Portal</a>
+    <a href="admissions.html" class="neon-btn">Admissions</a>
+    <a href="resources.html" class="neon-btn">Resources</a>
+    <a href="showcase.html" class="neon-btn">Showcase</a>
+    <a href="contact.html" class="neon-btn">Contact</a>
+  </div>
 </section>
 
 <footer>
@@ -246,17 +324,9 @@ footer {
 </footer>
 
 <script>
-function openMenu() {
-  document.getElementById("sideMenu").style.width = "260px";
-}
-function closeMenu() {
-  document.getElementById("sideMenu").style.width = "0";
-}
-
-// Close sidebar on Escape key
-document.addEventListener('keydown', function(event) {
-  if(event.key === "Escape") closeMenu();
-});
+function openMenu() { document.getElementById("sideMenu").style.width = "260px"; }
+function closeMenu() { document.getElementById("sideMenu").style.width = "0"; }
+document.addEventListener('keydown', function(event) { if(event.key === "Escape") closeMenu(); });
 </script>
 
 </body>
