--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@ footer {
 <nav id="sideMenu" class="side-menu">
   <span class="close-btn" onclick="closeMenu()">&times;</span>
   <a href="index.html">News & Announcements</a>
+  <a href="#quick-access">Quick Access</a> 
   <a href="student-portal.html">Student Portal</a>
   <a href="admissions.html">Admissions</a>
   <a href="resources.html">Resources</a>
@@ -313,7 +314,7 @@ footer {
     <img src="https://images.unsplash.com/photo-1513258496099-48168024aec0?auto=format&fit=crop&w=400&q=80" alt="Modern library filled with resources">
   </div>
 
-  <h3>Quick Access</h3>
+  <h3 id="quick-access">Quick Access</h3>
   <div class="feature-buttons">
     <a href="student-portal.html" class="neon-btn">Student Portal</a>
     <a href="parent-portal.html" class="neon-btn">Parent Portal</a>
