--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>St Paul Learning Centre</title>
 
+<!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
 
+<!-- Firebase (public index.html) -->
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
   import { getAuth } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
@@ -26,15 +28,27 @@
 body {
   margin: 0;
   font-family: "Inter", sans-serif;
-  background: linear-gradient(135deg, #0f172a, #1e293b);
   color: white;
   min-height: 100vh;
   overflow-x: hidden;
+
+  /* Animated Neon Gradient Background */
+  background: linear-gradient(270deg, #0f172a, #1e293b, #2563eb, #60a5fa);
+  background-size: 800% 800%;
+  animation: gradientBG 20s ease infinite;
+}
+
+/* Gradient Background Animation */
+@keyframes gradientBG {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 }
 
 /* -------------------- Navbar -------------------- */
 .navbar {
   display: flex;
+  justify-content: center;
   align-items: center;
   padding: 10px 20px;
   background: linear-gradient(90deg, #1e3a8a, #2563eb);
@@ -44,41 +58,25 @@ body {
   box-shadow: 0 2px 10px rgba(0,0,0,0.4);
 }
 
-.menu-btn {
-  font-size: 1.8rem;
-  cursor: pointer;
-  color: white;
-  margin-right: 20px;
-  transition: transform 0.3s;
-}
-.menu-btn:hover {
-  transform: scale(1.2);
-}
-
 .navbar-center {
-  flex: 1;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
 }
 
 .logo-link {
-  /* Change 1: Flex-direction to column for vertical stacking */
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   align-items: center;
   text-decoration: none;
   color: white;
 }
 
 .school-logo {
-  /* Change 2: Make logo small */
-  width: 45px; 
-  height: 45px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
-  /* Change 3: Remove margin-right for centering */
-  margin-right: 0; 
-  margin-bottom: 5px; /* Add a small gap between logo and text */
+  margin-bottom: 5px;
   border: 2px solid white;
   transition: transform 0.5s;
 }
@@ -87,10 +85,10 @@ body {
 }
 
 .logo-text {
-  font-size: 1rem; /* Adjust font size to fit smaller logo */
+  font-size: 1.2rem;
   font-weight: 700;
-  text-shadow: 0 0 10px #60a5fa, 0 0 20px #3b82f6;
   text-align: center;
+  text-shadow: 0 0 10px #60a5fa, 0 0 20px #3b82f6;
 }
 
 /* -------------------- Sidebar -------------------- */
@@ -189,18 +187,6 @@ section h2 {
   margin-top: 20px;
 }
 
-/* Button Entrance + Pulse Glow Animation */
-@keyframes slideGlow {
-  0% { opacity: 0; transform: translateY(20px); box-shadow: 0 0 0px #60a5fa; }
-  50% { opacity: 1; transform: translateY(0); box-shadow: 0 0 15px #60a5fa, 0 0 25px #3b82f6; }
-  100% { box-shadow: 0 0 10px #60a5fa, 0 0 20px #3b82f6; }
-}
-@keyframes pulseGlow {
-  0% { box-shadow: 0 0 10px #60a5fa, 0 0 20px #3b82f6; }
-  50% { box-shadow: 0 0 20px #60a5fa, 0 0 35px #3b82f6, 0 0 40px #93c5fd; }
-  100% { box-shadow: 0 0 10px #60a5fa, 0 0 20px #3b82f6; }
-}
-
 .neon-btn {
   padding: 12px 25px;
   text-decoration: none;
@@ -210,18 +196,11 @@ section h2 {
   border: 2px solid #60a5fa;
   border-radius: 8px;
   text-align: center;
-  transition: 0.3s;
   position: relative;
-  opacity: 0;
-  transform: translateY(20px);
-  animation: slideGlow 0.8s forwards, pulseGlow 2.5s ease-in-out 0.8s infinite;
+  opacity: 1;
+  transform: translateY(0);
+  animation: pulseGlow 2.5s ease-in-out infinite;
 }
-.feature-buttons .neon-btn:nth-child(1) { animation-delay: 0.1s, 0.9s; }
-.feature-buttons .neon-btn:nth-child(2) { animation-delay: 0.3s, 1.1s; }
-.feature-buttons .neon-btn:nth-child(3) { animation-delay: 0.5s, 1.3s; }
-.feature-buttons .neon-btn:nth-child(4) { animation-delay: 0.7s, 1.5s; }
-.feature-buttons .neon-btn:nth-child(5) { animation-delay: 0.9s, 1.7s; }
-.feature-buttons .neon-btn:nth-child(6) { animation-delay: 1.1s, 1.9s; }
 
 .neon-btn::before {
   content: '';
@@ -240,7 +219,6 @@ section h2 {
   background: #2563eb;
   box-shadow: 0 0 15px #60a5fa, 0 0 25px #3b82f6, 0 0 35px #93c5fd;
 }
-
 .neon-btn:hover::before {
   opacity: 1;
 }
@@ -255,16 +233,21 @@ footer {
   text-shadow: 0 0 5px #60a5fa;
 }
 
-/* -------------------- Animations -------------------- */
+/* -------------------- Glow Animation -------------------- */
 @keyframes glow {
   from { text-shadow: 0 0 10px #60a5fa, 0 0 20px #3b82f6; }
   to { text-shadow: 0 0 20px #93c5fd, 0 0 30px #2563eb; }
 }
 
+@keyframes pulseGlow {
+  0% { box-shadow: 0 0 10px #60a5fa, 0 0 20px #3b82f6; }
+  50% { box-shadow: 0 0 20px #60a5fa, 0 0 35px #3b82f6, 0 0 40px #93c5fd; }
+  100% { box-shadow: 0 0 10px #60a5fa, 0 0 20px #3b82f6; }
+}
+
 /* -------------------- Responsive -------------------- */
 @media (max-width: 768px) {
-  /* Change 4: Adjust logo-text size for mobile */
-  .logo-text { font-size: 0.8rem; } 
+  .logo-text { font-size: 1rem; }
   .gallery { flex-direction: column; align-items: center; }
   .feature-buttons { flex-direction: column; align-items: center; }
 }
@@ -272,20 +255,21 @@ footer {
 </head>
 <body>
 
+<!-- Navbar -->
 <div class="navbar">
-  <span class="menu-btn" onclick="openMenu()" tabindex="0">&#9776;</span>
   <div class="navbar-center">
     <a href="https://nicholasbagenda.netlify.app" target="_blank" class="logo-link">
-      <img src="https://i.postimg.cc/t4yDG3Fq/Mon-21-07-2025-16-26-06.png" alt="School Logo" class="school-logo">
+      <img src="https://i.postimg.cc/t4yDG3Fq/Mon-21-07-2025-16-26-06.png" 
+           alt="School Logo" class="school-logo">
       <span class="logo-text">St Paul Learning Centre</span>
     </a>
   </div>
 </div>
 
+<!-- Sidebar -->
 <nav id="sideMenu" class="side-menu">
   <span class="close-btn" onclick="closeMenu()">&times;</span>
   <a href="index.html">News & Announcements</a>
-  <a href="#quick-access">Quick Access</a> 
   <a href="student-portal.html">Student Portal</a>
   <a href="admissions.html">Admissions</a>
   <a href="resources.html">Resources</a>
@@ -305,16 +289,16 @@ footer {
 <section>
   <h2>Welcome to St Paul Learning Centre</h2>
   <p>
-    At <strong>St Paul Learning Centre</strong>, we are committed to unlocking every student’s potential and cultivating a dynamic, inclusive community. Explore our intuitive student and parent portals, access rich learning resources, witness our school’s inspiring showcase, and stay informed with the latest news and exciting announcements. Together, we create a world of opportunity and achievement.
+    At <strong>St Paul Learning Centre</strong>, we are committed to unlocking every student’s potential and cultivating a dynamic, inclusive community. Explore our intuitive student and parent portals, access rich learning resources, witness our school’s inspiring showcase, and stay informed with the latest news and exciting announcements.
   </p>
 
   <div class="gallery">
-    <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=400&q=80" alt="Bright and welcoming school hall">
-    <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=400&q=80" alt="Interactive classroom full of learning">
-    <img src="https://images.unsplash.com/photo-1513258496099-48168024aec0?auto=format&fit=crop&w=400&q=80" alt="Modern library filled with resources">
+    <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=400&q=80" alt="School Hall">
+    <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=400&q=80" alt="Classroom">
+    <img src="https://images.unsplash.com/photo-1513258496099-48168024aec0?auto=format&fit=crop&w=400&q=80" alt="Library">
   </div>
 
-  <h3 id="quick-access">Quick Access</h3>
+  <h3>Quick Access 😎</h3>
   <div class="feature-buttons">
     <a href="student-portal.html" class="neon-btn">Student Portal</a>
     <a href="parent-portal.html" class="neon-btn">Parent Portal</a>
@@ -330,9 +314,17 @@ footer {
 </footer>
 
 <script>
-function openMenu() { document.getElementById("sideMenu").style.width = "260px"; }
-function closeMenu() { document.getElementById("sideMenu").style.width = "0"; }
-document.addEventListener('keydown', function(event) { if(event.key === "Escape") closeMenu(); });
+function openMenu() {
+  document.getElementById("sideMenu").style.width = "260px";
+}
+function closeMenu() {
+  document.getElementById("sideMenu").style.width = "0";
+}
+
+// Close sidebar on Escape key
+document.addEventListener('keydown', function(event) {
+  if(event.key === "Escape") closeMenu();
+});
 </script>
 
 </body>
