--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>St Paul Learning Centre</title>
 
-<!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
 
-<!-- Firebase (public index.html) -->
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
   import { getAuth } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
@@ -48,7 +46,7 @@ body {
 /* -------------------- Navbar -------------------- */
 .navbar {
   display: flex;
-  justify-content: center;
+  justify-content: space-between; /* Change to space-between */
   align-items: center;
   padding: 10px 20px;
   background: linear-gradient(90deg, #1e3a8a, #2563eb);
@@ -62,43 +60,47 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* Center the logo container */
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
-   /* 📱 Side Menu */
-    .side-menu {
-      height: 100%;
-      width: 0;
-      position: fixed;
-      z-index: 10;
-      top: 0;
-      left: 0;
-      background-color: #002b5c;
-      overflow-x: hidden;
-      transition: width 0.4s ease;
-      padding-top: 60px;
-    }
 
-    .side-menu a {
-      padding: 15px 30px;
-      text-decoration: none;
-      color: white;
-      font-size: 18px;
-      display: block;
-      transition: 0.3s;
-    }
+/* **NEW** Hamburger Menu Button */
+#menu-toggle {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  z-index: 2001; /* Must be above the sidebar */
+  position: absolute; /* Position in the left corner */
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
 
-    .side-menu a:hover {
-      background-color: #0056b3;
-    }
+.hamburger-icon {
+  width: 25px;
+  height: 3px;
+  background-color: white;
+  margin: 4px 0;
+  transition: 0.4s;
+  border-radius: 2px;
+  box-shadow: 0 0 5px #60a5fa;
+}
 
-    .side-menu .close-btn {
-      position: absolute;
-      top: 10px;
-      right: 25px;
-      font-size: 36px;
-      color: white;
-      cursor: pointer;
-    }
+/* Change icon to 'X' when menu is open (applied via JS) */
+.change .bar1 {
+  transform: translateY(7px) rotate(-45deg);
+}
 
+.change .bar2 {
+  opacity: 0;
+}
+
+.change .bar3 {
+  transform: translateY(-7px) rotate(45deg);
+}
 
 .logo-link {
   display: flex;
@@ -137,9 +139,9 @@ body {
   background: #1e3a8a;
   overflow-x: hidden;
   transition: width 0.4s ease;
-  padding-top: 60px;
+  padding-top: 80px; /* Space for the navbar */
   box-shadow: 2px 0 12px rgba(0,0,0,0.5);
-  z-index: 2000;
+  z-index: 2000; /* Ensure it's above content but below the toggle button */
 }
 
 .side-menu a {
@@ -158,7 +160,13 @@ body {
   text-shadow: 0 0 15px #93c5fd;
 }
 
-/* -------------------- Header -------------------- */
+/* Remove close button from sidebar as the toggle button will handle it */
+.side-menu .close-btn {
+  display: none;
+}
+
+
+/* -------------------- Header and other sections (no changes needed) -------------------- */
 header {
   text-align: center;
   padding: 30px 20px;
@@ -291,8 +299,13 @@ footer {
 </head>
 <body>
 
-<!-- Navbar -->
 <div class="navbar">
+  <button id="menu-toggle" onclick="toggleMenu()">
+    <div class="hamburger-icon bar1"></div>
+    <div class="hamburger-icon bar2"></div>
+    <div class="hamburger-icon bar3"></div>
+  </button>
+  
   <div class="navbar-center">
     <a href="https://nicholasbagenda.netlify.app" target="_blank" class="logo-link">
       <img src="https://i.postimg.cc/t4yDG3Fq/Mon-21-07-2025-16-26-06.png" 
@@ -302,32 +315,14 @@ footer {
   </div>
 </div>
   
-  <!-- 📋 Sidebar Menu -->
-  <nav id="sideMenu" class="side-menu">
-    <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()">&times;</a>
-    <a href="index.html">News & Announcements</a>
-    <a href="student-portal.html">Student Portal</a>
-    <a href="admissions.html">Admissions</a>
-    <a href="resources.html">Resources</a>
-    <a href="showcase.html">Showcase</a>
-    <a href="contact.html">Contact</a>
-    <a href="class.html">Timetable</a>
-    <a href="teacher-resources.html">Teacher Resources</a>
-    <a href="parent-portal.html">Parent Portal</a>
-  </nav>
-
-
-
-<!-- Sidebar -->
 <nav id="sideMenu" class="side-menu">
-  <span class="close-btn" onclick="closeMenu()">&times;</span>
   <a href="index.html">News & Announcements</a>
   <a href="student-portal.html">Student Portal</a>
   <a href="admissions.html">Admissions</a>
   <a href="resources.html">Resources</a>
   <a href="showcase.html">Showcase</a>
   <a href="contact.html">Contact</a>
-  <a href="teachers.html">Teachers</a>
+  <a href="class.html">Timetable</a>
   <a href="teacher-resources.html">Teacher Resources</a>
   <a href="parent-portal.html">Parent Portal</a>
 </nav>
@@ -366,18 +361,32 @@ footer {
 </footer>
 
 <script>
-function openMenu() {
-  document.getElementById("sideMenu").style.width = "260px";
-}
-function closeMenu() {
-  document.getElementById("sideMenu").style.width = "0";
+/**
+ * Toggles the side menu open or closed and changes the icon.
+ */
+function toggleMenu() {
+  const sideMenu = document.getElementById("sideMenu");
+  const menuToggle = document.getElementById("menu-toggle");
+
+  if (sideMenu.style.width === "260px") {
+    // Menu is open, so close it
+    sideMenu.style.width = "0";
+    menuToggle.classList.remove("change");
+  } else {
+    // Menu is closed, so open it
+    sideMenu.style.width = "260px";
+    menuToggle.classList.add("change");
+  }
 }
 
 // Close sidebar on Escape key
 document.addEventListener('keydown', function(event) {
-  if(event.key === "Escape") closeMenu();
+  if(event.key === "Escape") {
+    document.getElementById("sideMenu").style.width = "0";
+    document.getElementById("menu-toggle").classList.remove("change");
+  }
 });
 </script>
 
 </body>
-  </html>
+</html>
